--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ keywords =
 author = Sepand KASHANI [LCAV, EPFL]
 author_email = sepand.kashani@epfl.ch
 url = https://github.com/imagingofthings/DeepWave
-download_url = ssh://git@c4science.ch/diffusion/7600/neural-network-powered-acoustic-camera.git
+download_url = ssh://git@github.com:imagingofthings/DeepWave.git
 
 classifiers =
     Intended Audience :: Science/Research
